<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="reciptizer.Local.Activity_Filter"
        android:orientation="vertical"
        android:background="@drawable/new_recipe_background_repeat"
        android:focusableInTouchMode="true">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FF090917">
        <Button
                android:id="@+id/New_Recipe_button_search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/tullbar_search"
                android:layout_margin="5dp"/>
        <TextView
                android:id="@+id/New_Recipe_Title"
                android:text="@string/activity_new_recipe_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"/>
        <Button
                android:id="@+id/New_Recipe_button_delete"
                android:background="@drawable/delete_recipe"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="reciptizer.Local.Activity_Filter"
                android:orientation="vertical">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#7F7F7F">
                    <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/no_img"
                            android:id="@+id/New_Recipe_TABLE1_COLUMN_IMG"
                            android:scaleType="centerCrop"
                            android:layout_margin="2dp"
                            tools:ignore="ContentDescription"
                            android:background="#ffffff"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <ImageView
                                android:layout_width="49dp"
                                android:layout_height="49dp"
                                android:id="@+id/New_Recipe_Photo_Camera"
                                android:layout_weight="1"
                                android:src="@drawable/photo_camera"
                                android:layout_marginStart="2dp"
                                android:layout_marginEnd="2dp"
                                android:layout_marginBottom="2dp"
                                tools:ignore="ContentDescription"
                                android:background="#ffffff"/>
                        <ImageView
                                android:layout_width="49dp"
                                android:layout_height="49dp"
                                android:id="@+id/New_Recipe_Photo_Load"
                                android:layout_weight="1"
                                android:src="@drawable/download_img"
                                android:layout_marginEnd="2dp"
                                android:layout_marginBottom="2dp"
                                tools:ignore="ContentDescription"
                                android:background="#ffffff"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp">
                <TextView
                        android:text="@string/activity_new_recipe_name_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:id="@+id/New_Recipe_TABLE1_COLUMN_RECIPE"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        tools:ignore="Autofill,LabelFor"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                <TextView
                        android:text="@string/activity_new_recipe_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <Spinner
                        android:id="@+id/New_Recipe_cat1"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:background="@drawable/all_activity_category"
                        android:spinnerMode="dropdown"
                        android:layout_marginEnd="100dp"/>
                <TextView
                        android:text="@string/activity_new_recipe_kitchen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                <Spinner
                        android:id="@+id/New_Recipe_cat2"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:background="@drawable/all_activity_category"
                        android:spinnerMode="dropdown"
                        android:layout_marginEnd="100dp"/>
                <TextView
                        android:text="@string/activity_new_recipe_preferences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                <Spinner
                        android:id="@+id/New_Recipe_cat3"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:background="@drawable/all_activity_category"
                        android:spinnerMode="dropdown"
                        android:layout_marginEnd="100dp"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/separator"
                    tools:ignore="ContentDescription"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <TextView
                        android:text="@string/activity_new_recipe_time"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <EditText
                        android:id="@+id/New_Recipe_TABLE1_COLUMN_TIME"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:gravity="center"
                        android:textSize="16sp"
                        tools:ignore="Autofill,LabelFor"/>
                <TextView
                        android:text="@string/activity_new_recipe_min"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <TextView
                        android:text="@string/activity_new_recipe_portions"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <EditText
                        android:id="@+id/New_Recipe_TABLE1_COLUMN_PORTION"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:gravity="center"
                        android:textSize="16sp"
                        tools:ignore="Autofill,LabelFor"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/separator"
                    tools:ignore="ContentDescription"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <TextView
                        android:text="@string/activity_new_recipe_ingredients"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/activity_new_recipe_quantity"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/activity_new_recipe_ed"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/New_Recipe_TABLE2_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <ImageView
                        android:id="@+id/New_Recipe_Add_Row_Table2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/add_row"
                        tools:ignore="ContentDescription"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/separator"
                    tools:ignore="ContentDescription"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <TextView
                        android:text="@string/activity_new_recipe_number"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/activity_new_recipe_descriptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="110dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/New_Recipe_TABLE3_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <ImageView
                        android:id="@+id/New_Recipe_Add_Row_Table3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/add_row"
                        tools:ignore="ContentDescription"/>
            </LinearLayout>
            <ImageView
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:id="@+id/New_Recipe_button_create_recipe"
                    android:src="@drawable/new_recipe_create_recipe"
                    tools:ignore="ContentDescription"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>