<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="reciptizer.Local.Activity_Recipe"
        android:orientation="vertical"
        android:background="@drawable/recipe_background_repeat">
    <LinearLayout
            android:id="@+id/Recipe_LinearLayout_Title"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FF090917">
        <Button
                android:id="@+id/Recipe_button_search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/tullbar_search"
                android:layout_margin="5dp"/>
        <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        <Button
                android:id="@+id/Recipe_button_save"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/recipe_button_world"
                android:layout_margin="5dp"/>
        <Button
                android:id="@+id/Recipe_button_edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/tullbar_edit"
                android:layout_margin="5dp"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                <TextView
                        android:id="@+id/Recipe_textView_TABLE1_COLUMN_RECIPE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="#F37C20"/>
            </LinearLayout>
                <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#7F7F7F"
                        tools:ignore="UselessParent"
                        android:elevation="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center">
                    <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:id="@+id/Recipe_imageView_TABLE1_COLUMN_IMG_TITLE"
                            android:scaleType="centerCrop"
                            android:layout_margin="2dp"
                            tools:ignore="ContentDescription"
                            android:background="#ffffff"/>
                    <ProgressBar
                            android:id="@+id/Recipe_progressBar"
                            style="?android:attr/progressBarStyleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:visibility="invisible"/>
                </RelativeLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp">
                <TextView
                        android:id="@+id/Recipe_textView_TABLE1_COLUMN_CATEGORY"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/Recipe_textView_TABLE1_COLUMN_KITCHEN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/Recipe_textView_TABLE1_COLUMN_PREFERENCES"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp">
                <TextView
                        android:text="@string/activity_recipe_time"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/Recipe_textView_TABLE1_COLUMN_TIME"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/activity_recipe_min"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp">
                <TextView
                        android:text="@string/activity_recipe_portions"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <Spinner
                        android:id="@+id/Recipe_spinner_TABLE1_COLUMN_PORTION"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:spinnerMode="dropdown"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/separator"
                    tools:ignore="ContentDescription"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <TextView
                        android:text="@string/activity_recipe_ingredients"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/activity_recipe_quantity"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/activity_recipe_ed"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
        <LinearLayout
                android:id="@+id/Recipe_linearLayout_TABLE_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
        </LinearLayout>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/separator"
                    tools:ignore="ContentDescription"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                <TextView
                        android:text="@string/activity_recipe_number"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/activity_recipe_descriptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/Recipe_linearLayout_TABLE_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>